--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/post_list"
         android:layout_width="382dp"
         android:layout_height="519dp"
+        android:clickable="false"
         android:paddingRight="20dp"
         app:reverseLayout="true"
         app:stackFromEnd="true"
