--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="post_images"   path="gs://crudtest-5e359.appspot.com/" />
+    <external-path name="my_images"   path="Android/data/com.benjamin.crudtest/files/Pictures" />
 </paths>
