--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -34,6 +34,16 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
 
+    <ImageView
+        android:id="@+id/imageViewDetail"
+        android:layout_width="315dp"
+        android:layout_height="258dp"
+        app:srcCompat="@android:drawable/ic_menu_gallery"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />
+
     <Button
         android:id="@+id/buttonShowMap"
         android:layout_width="wrap_content"
