--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,84 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.benjamin.crudtest.PostActivity">
+    tools:context="com.example.benjamin.crudtest.PostActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
-    <EditText
-        android:id="@+id/editTextFish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Fish"
-        android:inputType="textPersonName"
-        app:layout_constraintHorizontal_bias="0.475"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <EditText
+            android:id="@+id/editTextFish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Fish"
+            android:inputType="textPersonName"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="29dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.503" />
 
-    <EditText
-        android:id="@+id/editTextWeight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:ems="10"
-        android:hint="Weight"
-        android:inputType="number"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextFish" />
+        <EditText
+            android:id="@+id/editTextWeight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Weight"
+            android:inputType="number"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editTextFish" />
 
-    <Button
-        android:id="@+id/buttonAddFish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-1dp"
-        android:text="ADD FISH"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextWeight"
-        app:layout_constraintHorizontal_bias="0.716" />
+        <Button
+            android:id="@+id/buttonAddFish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ADD FISH"
+            android:layout_marginRight="-12dp"
+            app:layout_constraintRight_toRightOf="@+id/editTextWeight"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/mImageView" />
 
-    <Button
-        android:id="@+id/buttonAddMaps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="addMaps"
-        android:text="Add maps"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
-        app:layout_constraintVertical_bias="0.987" />
+        <Button
+            android:id="@+id/buttonAddMaps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="addMaps"
+            android:text="Add maps"
+            android:layout_marginTop="11dp"
+            app:layout_constraintTop_toBottomOf="@+id/buttonAddImg"
+            app:layout_constraintLeft_toLeftOf="@+id/buttonAddImg" />
 
-    <Button
-        android:id="@+id/buttonAddImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="dispatchTakePictureIntent"
-        android:text="Add image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.44"
-        app:layout_constraintVertical_bias="0.987" />
+        <Button
+            android:id="@+id/buttonAddImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="dispatchTakePictureIntent"
+            android:text="Add image"
+            android:layout_marginTop="19dp"
+            app:layout_constraintTop_toBottomOf="@+id/editTextWeight"
+            app:layout_constraintLeft_toLeftOf="@+id/editTextWeight" />
 
-    <ImageView
-        android:id="@+id/mImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/common_full_open_on_phone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.393"
-        android:layout_marginLeft="85dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/mImageView"
+            android:layout_width="214dp"
+            android:layout_height="166dp"
+            app:srcCompat="@drawable/common_full_open_on_phone"
+            app:layout_constraintTop_toBottomOf="@+id/buttonAddMaps"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="14dp" />
+
+        <ProgressBar
+            android:id="@+id/indeterminateBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
