--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,92 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.benjamin.crudtest.PostActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <EditText
-            android:id="@+id/editTextFish"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary">
+
+        <TextView
+            android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Fish"
-            android:inputType="textPersonName"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="29dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.503" />
+            android:text="@string/createTitle"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+    </android.support.v7.widget.Toolbar>
 
-        <EditText
-            android:id="@+id/editTextWeight"
-            android:layout_width="wrap_content"
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Weight"
-            android:inputType="number"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextFish" />
+            android:orientation="vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp">
 
-        <Button
-            android:id="@+id/buttonAddFish"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ADD FISH"
-            android:layout_marginRight="-12dp"
-            app:layout_constraintRight_toRightOf="@+id/editTextWeight"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/mImageView" />
+            <EditText
+                android:id="@+id/editTextFish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="@string/enter_fish_name" />
 
-        <Button
-            android:id="@+id/buttonAddMaps"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="addMaps"
-            android:text="Add maps"
-            android:layout_marginTop="11dp"
-            app:layout_constraintTop_toBottomOf="@+id/buttonAddImg"
-            app:layout_constraintLeft_toLeftOf="@+id/buttonAddImg" />
+            <EditText
+                android:id="@+id/editTextWeight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:hint="@string/enter_fish_weight"/>
 
-        <Button
-            android:id="@+id/buttonAddImg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="dispatchTakePictureIntent"
-            android:text="Add image"
-            android:layout_marginTop="19dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextWeight"
-            app:layout_constraintLeft_toLeftOf="@+id/editTextWeight" />
+            <ImageView
+                android:id="@+id/mImageView"
+                android:layout_width="match_parent"
+                android:layout_height="221dp"
+                android:contentDescription="@string/app_name"
+                app:srcCompat="@mipmap/ic_launcher" />
 
-        <ImageView
-            android:id="@+id/mImageView"
-            android:layout_width="214dp"
-            android:layout_height="166dp"
-            app:srcCompat="@drawable/common_full_open_on_phone"
-            app:layout_constraintTop_toBottomOf="@+id/buttonAddMaps"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="14dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <ProgressBar
-            android:id="@+id/indeterminateBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+
+                <Button
+                    android:id="@+id/buttonAddImg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_image"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/buttonAddMaps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/add_maps" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/buttonAddFish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/add_fish" />
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/indeterminateBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible" />
+
+</RelativeLayout>
